<resources>
    <string name="app_name">SleepMot</string>
    <string name="action_settings">Customize me</string>
    <string name="sleep_button">Sleep</string>
    <string name="wakeup_button">Wake up</string>

    <string name="settings">Preferences</string>

    <string name="sleep_mode_title">Sleep mode</string>
    <string name="ringer_mode_title">Ringer mode</string>
    <string name="ringer_mode_a_default">Normal</string>
    <string name="ringer_mode_s_default">Vibrate</string>
    <string name="ringer_mode_normal">Normal</string>
    <string name="ringer_mode_vibrate">Vibrate</string>
    <string name="ringer_mode_silence">Silence</string>
    <string name="wifi_title">Wifi</string>
    <string name="wifi_on">On</string>
    <string name="wifi_off">Off</string>
    <string name="brightness_title">Brightness</string>
    <string name="brightness_do_not_change">Do not change</string>
    <string name="brightness_change">Change</string>

    <string name="awake_mode_title">Awake mode</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string-array name="array_ringer_mode">
        <item>Normal</item>
        <item>Vibrate</item>
        <item>Silence</item>
    </string-array>

    <string name="hello_world">Hello world!</string>

</resources>
