<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/sleep_mode_title"
        android:key="pref_key_sleeping_mode">
        <ListPreference
            android:key="pref_s_ring_mode"
            android:title="@string/ringer_mode_title"
            android:entries="@array/array_ringer_mode"
            android:entryValues="@array/array_ringer_mode"
            android:summary="@string/ringer_mode_s_default"
            android:defaultValue="@string/ringer_mode_s_default"
            />
        <CheckBoxPreference
            android:key="pref_s_wifi"
            android:title="@string/wifi_title"
            android:defaultValue="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/awake_mode_title"
        android:key="pref_key_waking_mode">
        <ListPreference
            android:key="pref_a_ring_mode"
            android:title="@string/ringer_mode_title"
            android:entries="@array/array_ringer_mode"
            android:entryValues="@array/array_ringer_mode"
            android:summary="@string/ringer_mode_a_default"
            android:defaultValue="@string/ringer_mode_a_default"
            />
        <CheckBoxPreference
            android:key="pref_a_wifi"
            android:title="@string/wifi_title"
            android:defaultValue="true"
            />

    </PreferenceCategory>
</PreferenceScreen>
