<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000080"
    android:id="@+id/fragment_Settings"
    >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_mode_title"
                android:id="@+id/sleep_mode_title"
                android:textColor="@color/white"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringer_mode_title"
                android:id="@+id/sleep_mode_ringer_mode_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/white" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/sleep_mode_rgRingerMode">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringer_mode_normal"
                android:id="@+id/sleep_mode_rbRingNormal"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringer_mode_vibrate"
                android:id="@+id/sleep_mode_rbRingVibrate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringer_mode_silence"
                android:id="@+id/sleep_mode_rbRingSilence"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"/>
    </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_title"
                android:id="@+id/sleep_mode_wifi_title"
                android:textColor="@color/white"
                android:layout_marginTop="27dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/sleep_mode_rgWifi">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_on"
                    android:id="@+id/sleep_mode_rbWifiOn"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_off"
                    android:id="@+id/sleep_mode_rbWifiOff"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness_title"
                android:id="@+id/sleep_mode_brighness_title"
                android:textColor="@color/white"
                android:layout_marginTop="27dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/sleep_mode_rgBrightness">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brightness_change"
                    android:id="@+id/sleep_mode_rbBrightnessChange"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brigntness_do_not_change"
                    android:id="@+id/sleep_mode_rbBrightnessDoNotChange"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"/>


            </RadioGroup>

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sleep_mode_seekBarBrightness"
                android:layout_toStartOf="@+id/sleep_mode_title"
                android:layout_toLeftOf="@+id/sleep_mode_title"/>


                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/awake_mode_title"
                                            android:id="@+id/awake_mode_title"
                                            android:textColor="@color/white"
                                            android:layout_alignParentBottom="true"
                                            android:layout_alignRight="@+id/sleep_mode_title"
                                            android:layout_alignEnd="@+id/sleep_mode_title"
                                            android:layout_gravity="center_horizontal" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/ringer_mode_title"
                                            android:id="@+id/awake_mode_ringer_mode_title"
                                            android:layout_alignParentLeft="true"
                                            android:layout_alignParentStart="true"
                                            android:textColor="@color/white" />
                                        <RadioGroup
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:orientation="vertical"
                                            android:id="@+id/awake_mode_rgRingerMode">

                                            <RadioButton
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/ringer_mode_normal"
                                                android:id="@+id/awake_mode_rbRingNormal"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:textColor="@color/white"/>

                                            <RadioButton
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/ringer_mode_vibrate"
                                                android:id="@+id/awake_mode_rbRingVibrate"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:textColor="@color/white"/>

                                            <RadioButton
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/ringer_mode_silence"
                                                android:id="@+id/awake_mode_rbRingSilence"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:textColor="@color/white"/>
                                        </RadioGroup>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/wifi_title"
                                            android:id="@+id/awake_mode_wifi_title"
                                            android:textColor="@color/white"
                                            android:layout_marginTop="27dp"
                                            android:layout_alignParentLeft="true"
                                            android:layout_alignParentStart="true" />

                                        <RadioGroup
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:orientation="vertical"
                                            android:id="@+id/awake_mode_rgWifi">

                                            <RadioButton
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/wifi_on"
                                                android:id="@+id/awake_mode_rbWifiOn"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:textColor="@color/white"/>

                                            <RadioButton
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/wifi_off"
                                                android:id="@+id/awake_mode_rbWifiOff"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:textColor="@color/white"/>
                                        </RadioGroup>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/brightness_title"
                                            android:id="@+id/awake_mode_brighness_title"
                                            android:textColor="@color/white"
                                            android:layout_marginTop="27dp"
                                            android:layout_alignParentLeft="true"
                                            android:layout_alignParentStart="true" />

                                        <RadioGroup
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:orientation="vertical"
                                            android:id="@+id/awake_mode_rgBrightness">

                                            <RadioButton
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/brightness_change"
                                                android:id="@+id/awake_mode_rbBrightnessChange"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:textColor="@color/white"/>

                                            <RadioButton
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/brigntness_do_not_change"
                                                android:id="@+id/awake_mode_rbBrightnessDoNotChange"
                                                android:layout_alignParentLeft="true"
                                                android:layout_alignParentStart="true"
                                                android:textColor="@color/white"/>


                                        </RadioGroup>

                                        <SeekBar
                                            android:layout_width="fill_parent"
                                            android:layout_height="wrap_content"
                                            android:id="@+id/awake_mode_seekBarBrightness"
                                            android:layout_toStartOf="@+id/awake_mode_title"
                                            android:layout_toLeftOf="@+id/awake_mode_title"/>
        </LinearLayout>
</ScrollView>